--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
 body {
     font-family: 'Times New Roman', Times, serif;
+    margin: 0;
 }
 
 h1 {
     font-size: 40PX;
+
 }
 
 .color-orange {
     color: orange;
 }
 
-section {
-
+.first-conteiner {
     margin-left: 5%;
     margin-right: 5%;
     display: flex;
     width: 50%;
-
+    margin-bottom: 100px;
 }
 
 .half-width {
@@ -25,6 +26,7 @@ section {
 
 .half-width img {
     width: 80%;
+    padding-left: 80%;
 }
 
 .box-conteiner {
@@ -39,4 +41,118 @@ section {
     border-radius: 5px;
     background-image: linear-gradient(red, tomato);
 
+}
+
+#align-center {
+    text-align: center;
+}
+
+.second-conteiner {
+    margin-left: 5%;
+    margin-right: 5%;
+    display: flex;
+    margin-bottom: 100px;
+    width: 90%;
+
+
+
+}
+
+h3 {
+    text-align: center;
+}
+
+.mission-conteiner {
+    background-color: lightsteelblue;
+    padding: 10px;
+    border-radius: 15px;
+    margin-right: 5%;
+    width: 100%;
+    text-align: justify;
+
+
+}
+
+.mission-conteiner img {
+
+    width: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+
+.vission-conteiner {
+    background-color: antiquewhite;
+    padding: 10px;
+    border-radius: 15px;
+    margin-right: 5%;
+    width: 100%;
+    text-align: justify;
+
+
+
+
+}
+
+.vission-conteiner img {
+    width: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.goal-conteiner {
+    background-color: burlywood;
+    padding: 10px;
+    border-radius: 15px;
+    width: 100%;
+    text-align: justify;
+
+}
+
+.goal-conteiner img {
+    width: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.third-conteiner {
+
+    margin-left: 5%;
+    margin-right: 5%;
+    display: flex;
+
+}
+
+
+.third-conteiner img {
+    width: 80%;
+
+}
+
+.four-conteiner {
+    margin-left: 5%;
+    margin-right: 5%;
+    display: flex;
+
+}
+
+.four-conteiner img {
+    width: 70%;
+    padding-left: 20%;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+.five-conteiner {
+    background-color: sienna;
+    color: aliceblue;
+    text-align: center;
 }
